--- a/web/desktop.css
+++ b/web/desktop.css
@@ -2,6 +2,7 @@
     --primary-color: #93f;
     --secondary-color: #f9f9f9;
     --bg-tint: #93f8;
+    --bg-extra-tint: #93f4;
 }
 
 body {
@@ -13,8 +14,18 @@ body {
     overflow: hidden;
 }
 
+@keyframes background-image {
+    from { background-size: calc(1920px * 1.2) calc(1080px) * 1.2 }
+    to { background-size: auto; }
+}
+
 div.page-top {
+    animation-duration: 0.5s;
+    animation-name: background-image;
+    animation-timing-function: ease;
     background-image: url(vancouver.jpg);
+    background-position: 50% 50%;
+    background-size: auto;
     height: 1080px;
 }
 
@@ -26,7 +37,8 @@ div.page-top div.bg-tint {
 
 div.page-top div.temp-container {
     backdrop-filter: blur(20px);
-    background-color: var(--bg-tint);
+    background-color: var(--bg-extra-tint);
+    box-shadow: 0px 0px 20px #0005;
     color: var(--secondary-color);
     float: left;
     height: 100vh;
@@ -65,27 +77,41 @@ div.page-top div.graph-container {
 }
 
 div.graph-container div.graph-box {
+    border-radius: 25px;
+    box-shadow: 0px 0px 10px #0005;
     height: 375px;
     margin: auto;
     width: 750px;
 }
 
+div.graph-container div.graph-box.no-topbar {
+    height: 325px;
+}
+
 div.graph-box div.graph-box-topbar {
-    backdrop-filter: blur(2px);
-    background-color: #fff9;
+    backdrop-filter: blur(20px);
+    background-color: #fffc;
     border-top-left-radius: 25px;
     border-top-right-radius: 25px;
     height: 50px;
     width: 100%;
 }
 
+div.graph-box.no-topbar div.graph-box-topbar {
+    display: none;
+}
+
 div.graph-box div.graph-box-content {
-    backdrop-filter: blur(5px);
-    background-color: #fffc;
-    border-bottom-left-radius: 30px;
-    border-bottom-right-radius: 30px;
-    height: calc(100% - 50px);
+    background-color: #fff;
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+    height: 325px;
     width: 100%;
+}
+
+div.graph-box.no-topbar div.graph-box-content {
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
 }
 
 div.graph-box-topbar div.topbar-time-range {
@@ -106,9 +132,7 @@ div.graph-box-topbar div.topbar-time-range:hover { background-color: #fff3; }
 div.graph-box-topbar div.topbar-time-range:active { background-color: #fff6; }
 
 div.graph-box-topbar div.topbar-time-range.disabled {
-    background-color: #fff0;
-    cursor: not-allowed;
-    opacity: 0.5;
+    display: none;
 }
 
 div.graph-box-content div.graph-canvas-container {
